# RAG_DOCS_Q-A

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  rag_app.py
